// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ActionButton default 1`] = `
<div
  className="actionButtonWrapper"
  data-jsx={3236727444}
>
  <div
    className="actionButton"
    data-jsx={3236727444}
  >
    <button
      className="ui large circular icon primary button"
      disabled={undefined}
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
    >
      <i
        aria-hidden="true"
        className="plus icon"
      />
    </button>
  </div>
  <div
    className="ui vertical text menu buttonMenu"
    data-jsx={3236727444}
  >
    <button
      className="item"
      data-jsx={3236727444}
      onClick={[Function]}
    >
      abcd
    </button>
    <button
      className="item"
      data-jsx={3236727444}
      onClick={[Function]}
    >
      cdef
    </button>
  </div>
</div>
`;

exports[`Storyshots Collapser collapsed 1`] = `
<div
  className="collapser"
  data-jsx={1840183473}
>
  <div
    className="content collapsed"
    data-jsx={1840183473}
  >
    <div>
      <p>
        hello this is a very short question that is getting longer and longer as we speak. it is in fact very very long. the end is even hidden at the beginning.
      </p>
      <p>
        wow, is this a long question. i could never have imagined seeing such a question.
      </p>
      <p>
        hello this is a very short question that is getting longer and longer as we speak. it is in fact very very long. the end is even hidden at the beginning.
      </p>
      <p>
        wow, is this a long question. i could never have imagined seeing such a question.
      </p>
    </div>
  </div>
  <div
    className="collapse"
    data-jsx={1840183473}
  >
    <i
      aria-hidden="true"
      className="angle double down icon"
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`Storyshots Collapser default 1`] = `
<div
  className="collapser"
  data-jsx={1840183473}
>
  <div
    className="content collapsed"
    data-jsx={1840183473}
  >
    <div>
      <p>
        hello this is a very short question that is getting longer and longer as we speak. it is in fact very very long. the end is even hidden at the beginning.
      </p>
      <p>
        wow, is this a long question. i could never have imagined seeing such a question.
      </p>
      <p>
        hello this is a very short question that is getting longer and longer as we speak. it is in fact very very long. the end is even hidden at the beginning.
      </p>
      <p>
        wow, is this a long question. i could never have imagined seeing such a question.
      </p>
    </div>
  </div>
  <div
    className="collapse"
    data-jsx={1840183473}
  >
    <i
      aria-hidden="true"
      className="angle double down icon"
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`Storyshots Collapser extended 1`] = `
<div
  className="collapser"
  data-jsx={1840183473}
>
  <div
    className="content"
    data-jsx={1840183473}
  >
    <div>
      <p>
        hello this is a very short question that is getting longer and longer as we speak. it is in fact very very long. the end is even hidden at the beginning.
      </p>
      <p>
        wow, is this a long question. i could never have imagined seeing such a question.
      </p>
      <p>
        hello this is a very short question that is getting longer and longer as we speak. it is in fact very very long. the end is even hidden at the beginning.
      </p>
      <p>
        wow, is this a long question. i could never have imagined seeing such a question.
      </p>
    </div>
  </div>
  <div
    className="collapse"
    data-jsx={1840183473}
  >
    <i
      aria-hidden="true"
      className="angle double up icon"
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`Storyshots ConfusionBarometer default 1`] = `
<div
  className="confusionBarometer"
  data-jsx={3527990463}
>
  <h2
    data-jsx={3527990463}
  >
    <span>
      Confusion-Barometer
    </span>
  </h2>
  <div
    className="ui toggle checkbox"
    onChange={[Function]}
    onClick={[Function]}
    onMouseDown={[Function]}
  >
    <input
      checked={false}
      className="hidden"
      name={undefined}
      readOnly={true}
      tabIndex={0}
      type="checkbox"
      value={false}
    />
    <label>
      Activated
    </label>
  </div>
</div>
`;

exports[`Storyshots ConfusionSlider default 1`] = `
<div
  className="confusionSlider"
  data-jsx={219419674}
>
  <div
    className="title"
    data-jsx={219419674}
  >
    <h2>
      Speed
    </h2>
  </div>
  <div
    className="slider"
    data-jsx={219419674}
  >
    <div
      className="rangeslider rangeslider-horizontal"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="rangeslider__fill"
        style={
          Object {
            "width": "0px",
          }
        }
      />
      <div
        className="rangeslider__handle"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        style={
          Object {
            "left": "0px",
          }
        }
      >
        <div
          className="rangeslider__tooltip"
        >
          <span>
            10
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots FeedbackChannel default 1`] = `
<div
  className="feedbackChannel"
  data-jsx={3242351590}
>
  <h2
    data-jsx={3242351590}
  >
    <span>
      Feedback-Channel
    </span>
  </h2>
  <div
    className="toggle"
    data-jsx={3242351590}
  >
    <div
      className="ui toggle checkbox"
      onChange={[Function]}
      onClick={[Function]}
      onMouseDown={[Function]}
    >
      <input
        checked={false}
        className="hidden"
        name={undefined}
        readOnly={true}
        tabIndex={0}
        type="checkbox"
        value={false}
      />
      <label>
        Activated
      </label>
    </div>
  </div>
  <div
    className="toggle publicationToggle"
    data-jsx={3242351590}
  >
    <div
      className="ui disabled toggle checkbox publishCheckbox"
      onChange={[Function]}
      onClick={[Function]}
      onMouseDown={[Function]}
    >
      <input
        checked={false}
        className="hidden"
        name={undefined}
        readOnly={true}
        tabIndex={-1}
        type="checkbox"
        value={false}
      />
      <label>
        Publish questions
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots FeedbackChannel isActive 1`] = `
<div
  className="feedbackChannel"
  data-jsx={3242351590}
>
  <h2
    data-jsx={3242351590}
  >
    <span>
      Feedback-Channel
    </span>
  </h2>
  <div
    className="toggle"
    data-jsx={3242351590}
  >
    <div
      className="ui checked toggle checkbox"
      onChange={[Function]}
      onClick={[Function]}
      onMouseDown={[Function]}
    >
      <input
        checked={true}
        className="hidden"
        name={undefined}
        readOnly={true}
        tabIndex={0}
        type="checkbox"
        value={true}
      />
      <label>
        Activated
      </label>
    </div>
  </div>
  <div
    className="toggle publicationToggle"
    data-jsx={3242351590}
  >
    <div
      className="ui toggle checkbox publishCheckbox"
      onChange={[Function]}
      onClick={[Function]}
      onMouseDown={[Function]}
    >
      <input
        checked={false}
        className="hidden"
        name={undefined}
        readOnly={true}
        tabIndex={0}
        type="checkbox"
        value={false}
      />
      <label>
        Publish questions
      </label>
    </div>
  </div>
  <div
    className="feedbacks"
    data-jsx={3242351590}
  >
    <div
      className="feedback"
      data-jsx={3242351590}
    >
      <div
        className="feedback"
        data-jsx={3449085289}
      >
        <div
          className="content"
          data-jsx={3449085289}
        >
          hello alex!
        </div>
        <div
          className="delete"
          data-jsx={3449085289}
        >
          <button
            className="ui basic fluid icon button"
            disabled={undefined}
            onClick={[Function]}
            role="button"
            tabIndex={undefined}
          >
            <i
              aria-hidden="true"
              className="trash outline icon"
            />
          </button>
        </div>
        <div
          className="votes"
          data-jsx={3449085289}
        >
          +
          100
        </div>
      </div>
    </div>
    <div
      className="feedback"
      data-jsx={3242351590}
    >
      <div
        className="feedback"
        data-jsx={3449085289}
      >
        <div
          className="content"
          data-jsx={3449085289}
        >
          bla bleh
        </div>
        <div
          className="delete"
          data-jsx={3449085289}
        >
          <button
            className="ui basic fluid icon button"
            disabled={undefined}
            onClick={[Function]}
            role="button"
            tabIndex={undefined}
          >
            <i
              aria-hidden="true"
              className="trash outline icon"
            />
          </button>
        </div>
        <div
          className="votes"
          data-jsx={3449085289}
        >
          +
          40
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots FeedbackChannel isPublic 1`] = `
<div
  className="feedbackChannel"
  data-jsx={3242351590}
>
  <h2
    data-jsx={3242351590}
  >
    <span>
      Feedback-Channel
    </span>
  </h2>
  <div
    className="toggle"
    data-jsx={3242351590}
  >
    <div
      className="ui checked toggle checkbox"
      onChange={[Function]}
      onClick={[Function]}
      onMouseDown={[Function]}
    >
      <input
        checked={true}
        className="hidden"
        name={undefined}
        readOnly={true}
        tabIndex={0}
        type="checkbox"
        value={true}
      />
      <label>
        Activated
      </label>
    </div>
  </div>
  <div
    className="toggle publicationToggle"
    data-jsx={3242351590}
  >
    <div
      className="ui checked toggle checkbox publishCheckbox"
      onChange={[Function]}
      onClick={[Function]}
      onMouseDown={[Function]}
    >
      <input
        checked={true}
        className="hidden"
        name={undefined}
        readOnly={true}
        tabIndex={0}
        type="checkbox"
        value={true}
      />
      <label>
        Publish questions
      </label>
    </div>
  </div>
  <div
    className="feedbacks"
    data-jsx={3242351590}
  >
    <div
      className="feedback"
      data-jsx={3242351590}
    >
      <div
        className="feedback"
        data-jsx={3449085289}
      >
        <div
          className="content"
          data-jsx={3449085289}
        >
          hello alex!
        </div>
        <div
          className="delete"
          data-jsx={3449085289}
        >
          <button
            className="ui basic fluid icon button"
            disabled={undefined}
            onClick={[Function]}
            role="button"
            tabIndex={undefined}
          >
            <i
              aria-hidden="true"
              className="trash outline icon"
            />
          </button>
        </div>
        <div
          className="votes"
          data-jsx={3449085289}
        >
          +
          100
        </div>
      </div>
    </div>
    <div
      className="feedback"
      data-jsx={3242351590}
    >
      <div
        className="feedback"
        data-jsx={3449085289}
      >
        <div
          className="content"
          data-jsx={3449085289}
        >
          bla bleh
        </div>
        <div
          className="delete"
          data-jsx={3449085289}
        >
          <button
            className="ui basic fluid icon button"
            disabled={undefined}
            onClick={[Function]}
            role="button"
            tabIndex={undefined}
          >
            <i
              aria-hidden="true"
              className="trash outline icon"
            />
          </button>
        </div>
        <div
          className="votes"
          data-jsx={3449085289}
        >
          +
          40
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ListWithHeader default 1`] = `
<div
  data-jsx={3358450463}
>
  <h3
    className="listHeader"
    data-jsx={3358450463}
  >
    hello world
  </h3>
  <ul
    className="list"
    data-jsx={3358450463}
  >
    <li
      className="listItem"
      data-jsx={3358450463}
    >
      abcd
    </li>
    <li
      className="listItem"
      data-jsx={3358450463}
    >
      cdef
    </li>
  </ul>
</div>
`;

exports[`Storyshots Question MC with multiple versions 1`] = `
<div
  className="container"
  data-jsx={769450314}
>
  <h2
    className="title"
    data-jsx={769450314}
  >
    #
    4c821db
     - 
    This is a long question
     
    (v2)
  </h2>
  <div
    className="tags"
    data-jsx={769450314}
  >
    <div
      className="container"
      data-jsx={4150526596}
    >
      <div
        className="type tag"
        data-jsx={4150526596}
      >
        MC
      </div>
      <div
        className="tag"
        data-jsx={4150526596}
      >
        CAPM
      </div>
      <div
        className="tag"
        data-jsx={4150526596}
      >
        Risk
      </div>
    </div>
  </div>
  <div
    className="details"
    data-jsx={769450314}
  >
    <div
      className="container"
      data-jsx={2119890886}
    >
      <div
        className="column"
        data-jsx={2119890886}
      >
        Test1
      </div>
      <div
        className="column"
        data-jsx={2119890886}
      >
        Test2
      </div>
      <div
        className="column"
        data-jsx={2119890886}
      >
        Test3
      </div>
      <div
        className="column"
        data-jsx={2119890886}
      >
        <div
          data-jsx={3358450463}
        >
          <h3
            className="listHeader"
            data-jsx={3358450463}
          >
            <span>
              Last used
            </span>
          </h3>
          <ul
            className="list"
            data-jsx={3358450463}
          >
            <li
              className="listItem"
              data-jsx={3358450463}
            >
              2015-02-08 14:32:11
            </li>
            <li
              className="listItem"
              data-jsx={3358450463}
            >
              2016-09-09 15:22:09
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Question MC without tags 1`] = `
<div
  className="container"
  data-jsx={769450314}
>
  <h2
    className="title"
    data-jsx={769450314}
  >
    #
    4c821db
     - 
    This is a long question
     
  </h2>
  <div
    className="tags"
    data-jsx={769450314}
  >
    <div
      className="container"
      data-jsx={4150526596}
    >
      <div
        className="type tag"
        data-jsx={4150526596}
      >
        MC
      </div>
    </div>
  </div>
  <div
    className="details"
    data-jsx={769450314}
  >
    <div
      className="container"
      data-jsx={2119890886}
    >
      <div
        className="column"
        data-jsx={2119890886}
      >
        Test1
      </div>
      <div
        className="column"
        data-jsx={2119890886}
      >
        Test2
      </div>
      <div
        className="column"
        data-jsx={2119890886}
      >
        Test3
      </div>
      <div
        className="column"
        data-jsx={2119890886}
      >
        <div
          data-jsx={3358450463}
        >
          <h3
            className="listHeader"
            data-jsx={3358450463}
          >
            <span>
              Last used
            </span>
          </h3>
          <ul
            className="list"
            data-jsx={3358450463}
          >
            <li
              className="listItem"
              data-jsx={3358450463}
            >
              2015-02-08 14:32:11
            </li>
            <li
              className="listItem"
              data-jsx={3358450463}
            >
              2016-09-09 15:22:09
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Question SC with a single version 1`] = `
<div
  className="container"
  data-jsx={769450314}
>
  <h2
    className="title"
    data-jsx={769450314}
  >
    #
    4c821db
     - 
    This is a long question
     
  </h2>
  <div
    className="tags"
    data-jsx={769450314}
  >
    <div
      className="container"
      data-jsx={4150526596}
    >
      <div
        className="type tag"
        data-jsx={4150526596}
      >
        SC
      </div>
      <div
        className="tag"
        data-jsx={4150526596}
      >
        CAPM
      </div>
      <div
        className="tag"
        data-jsx={4150526596}
      >
        Risk
      </div>
    </div>
  </div>
  <div
    className="details"
    data-jsx={769450314}
  >
    <div
      className="container"
      data-jsx={2119890886}
    >
      <div
        className="column"
        data-jsx={2119890886}
      >
        Test1
      </div>
      <div
        className="column"
        data-jsx={2119890886}
      >
        Test2
      </div>
      <div
        className="column"
        data-jsx={2119890886}
      >
        Test3
      </div>
      <div
        className="column"
        data-jsx={2119890886}
      >
        <div
          data-jsx={3358450463}
        >
          <h3
            className="listHeader"
            data-jsx={3358450463}
          >
            <span>
              Last used
            </span>
          </h3>
          <ul
            className="list"
            data-jsx={3358450463}
          >
            <li
              className="listItem"
              data-jsx={3358450463}
            >
              2015-02-08 14:32:11
            </li>
            <li
              className="listItem"
              data-jsx={3358450463}
            >
              2016-09-09 15:22:09
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots QuestionBlock default 1`] = `
<div
  className="questionBlock"
  data-jsx={1012223770}
>
  <div
    className="timeLimit"
    data-jsx={1012223770}
  >
    <i
      aria-hidden="true"
      className="clock icon"
    />
    60
    s
  </div>
  <div
    className="showSolution"
    data-jsx={1012223770}
  >
    <i
      aria-hidden="true"
      className="hide icon"
    />
  </div>
  <div
    className="questions"
    data-jsx={1012223770}
  >
    <div
      className="question"
      data-jsx={1012223770}
    >
      <div
        className="questionSingle"
        data-jsx={1928862230}
      >
        <div
          className="id"
          data-jsx={1928862230}
        >
          4c821db7-0940-4a24-b31a-7969104bbc9f
        </div>
        <div
          className="type"
          data-jsx={1928862230}
        >
          SC
        </div>
        <div
          className="content"
          data-jsx={1928862230}
        >
          This is a long question
        </div>
      </div>
    </div>
    <div
      className="question"
      data-jsx={1012223770}
    >
      <div
        className="questionSingle"
        data-jsx={1928862230}
      >
        <div
          className="id"
          data-jsx={1928862230}
        >
          4c821db7-0940-4a24-b31a-7969104bbc9f
        </div>
        <div
          className="type"
          data-jsx={1928862230}
        >
          SC
        </div>
        <div
          className="content"
          data-jsx={1928862230}
        >
          This is a long question
        </div>
      </div>
    </div>
    <div
      className="question"
      data-jsx={1012223770}
    >
      <div
        className="questionSingle"
        data-jsx={1928862230}
      >
        <div
          className="id"
          data-jsx={1928862230}
        >
          4c821db7-0940-4a24-b31a-7969104bbc9f
        </div>
        <div
          className="type"
          data-jsx={1928862230}
        >
          SC
        </div>
        <div
          className="content"
          data-jsx={1928862230}
        >
          This is a long question
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots QuestionBlock empty 1`] = `
<div
  className="questionBlock"
  data-jsx={1012223770}
>
  <div
    className="timeLimit"
    data-jsx={1012223770}
  >
    <i
      aria-hidden="true"
      className="clock icon"
    />
    60
    s
  </div>
  <div
    className="showSolution"
    data-jsx={1012223770}
  >
    <i
      aria-hidden="true"
      className="hide icon"
    />
  </div>
  <div
    className="questions"
    data-jsx={1012223770}
  />
</div>
`;

exports[`Storyshots QuestionSingle default 1`] = `
<div
  className="questionSingle"
  data-jsx={1928862230}
>
  <div
    className="id"
    data-jsx={1928862230}
  >
    4c821db7-0940-4a24-b31a-7969104bbc9f
  </div>
  <div
    className="type"
    data-jsx={1928862230}
  >
    SC
  </div>
  <div
    className="content"
    data-jsx={1928862230}
  >
    This is a long question
  </div>
</div>
`;

exports[`Storyshots QuestionTypes SC Answering Options 1`] = `
<div
  className="options"
  data-jsx={964719302}
>
  <div
    className="option"
    data-jsx={964719302}
  >
    <button
      className="ui basic fluid button"
      disabled={undefined}
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
    >
      answer 1
    </button>
  </div>
  <div
    className="option active"
    data-jsx={964719302}
  >
    <button
      className="ui basic fluid button"
      disabled={undefined}
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
    >
      antwort 2
    </button>
  </div>
  <div
    className="option"
    data-jsx={964719302}
  >
    <button
      className="ui basic fluid button"
      disabled={undefined}
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
    >
      option 3
    </button>
  </div>
</div>
`;

exports[`Storyshots QuestionTypes SC Creation Content 1`] = `
<textarea
  name="content"
  onChange={undefined}
  value={undefined}
/>
`;

exports[`Storyshots QuestionTypes SC Creation Option (correct) 1`] = `
<div
  className="option correct"
  data-jsx-ext="23361152147"
>
  <button
    className="leftAction"
    data-jsx-ext="23361152147"
    onClick={undefined}
  >
    <svg
      fill="currentColor"
      height="1em"
      preserveAspectRatio="xMidYMid meet"
      style={
        Object {
          "color": undefined,
          "verticalAlign": "middle",
        }
      }
      viewBox="0 0 40 40"
      width="1em"
    >
      <g>
        <path
          d="m15.9 30.7v-15.7q0-0.3-0.2-0.5t-0.5-0.2h-1.4q-0.3 0-0.5 0.2t-0.2 0.5v15.7q0 0.3 0.2 0.5t0.5 0.2h1.4q0.3 0 0.5-0.2t0.2-0.5z m5.7 0v-15.7q0-0.3-0.2-0.5t-0.5-0.2h-1.4q-0.3 0-0.5 0.2t-0.2 0.5v15.7q0 0.3 0.2 0.5t0.5 0.2h1.4q0.3 0 0.5-0.2t0.2-0.5z m5.8 0v-15.7q0-0.3-0.2-0.5t-0.6-0.2h-1.4q-0.3 0-0.5 0.2t-0.2 0.5v15.7q0 0.3 0.2 0.5t0.5 0.2h1.4q0.4 0 0.6-0.2t0.2-0.5z m-12.2-22.1h10l-1.1-2.6q-0.1-0.2-0.3-0.3h-7.1q-0.2 0.1-0.4 0.3z m20.7 0.7v1.4q0 0.3-0.2 0.5t-0.5 0.2h-2.1v21.2q0 1.8-1.1 3.2t-2.5 1.3h-18.6q-1.4 0-2.5-1.3t-1-3.1v-21.3h-2.2q-0.3 0-0.5-0.2t-0.2-0.5v-1.4q0-0.3 0.2-0.5t0.5-0.2h6.9l1.6-3.8q0.3-0.8 1.2-1.4t1.7-0.5h7.2q0.9 0 1.8 0.5t1.2 1.4l1.5 3.8h6.9q0.3 0 0.5 0.2t0.2 0.5z"
        />
      </g>
    </svg>
  </button>
  <button
    className="toggle correct"
    data-jsx-ext="23361152147"
    onClick={undefined}
  >
    TRUE
  </button>
  <div
    className="name"
    data-jsx-ext="23361152147"
  >
    That's true!
  </div>
</div>
`;

exports[`Storyshots QuestionTypes SC Creation Option (incorrect) 1`] = `
<div
  className="option"
  data-jsx-ext="23361152147"
>
  <button
    className="leftAction"
    data-jsx-ext="23361152147"
    onClick={undefined}
  >
    <svg
      fill="currentColor"
      height="1em"
      preserveAspectRatio="xMidYMid meet"
      style={
        Object {
          "color": undefined,
          "verticalAlign": "middle",
        }
      }
      viewBox="0 0 40 40"
      width="1em"
    >
      <g>
        <path
          d="m15.9 30.7v-15.7q0-0.3-0.2-0.5t-0.5-0.2h-1.4q-0.3 0-0.5 0.2t-0.2 0.5v15.7q0 0.3 0.2 0.5t0.5 0.2h1.4q0.3 0 0.5-0.2t0.2-0.5z m5.7 0v-15.7q0-0.3-0.2-0.5t-0.5-0.2h-1.4q-0.3 0-0.5 0.2t-0.2 0.5v15.7q0 0.3 0.2 0.5t0.5 0.2h1.4q0.3 0 0.5-0.2t0.2-0.5z m5.8 0v-15.7q0-0.3-0.2-0.5t-0.6-0.2h-1.4q-0.3 0-0.5 0.2t-0.2 0.5v15.7q0 0.3 0.2 0.5t0.5 0.2h1.4q0.4 0 0.6-0.2t0.2-0.5z m-12.2-22.1h10l-1.1-2.6q-0.1-0.2-0.3-0.3h-7.1q-0.2 0.1-0.4 0.3z m20.7 0.7v1.4q0 0.3-0.2 0.5t-0.5 0.2h-2.1v21.2q0 1.8-1.1 3.2t-2.5 1.3h-18.6q-1.4 0-2.5-1.3t-1-3.1v-21.3h-2.2q-0.3 0-0.5-0.2t-0.2-0.5v-1.4q0-0.3 0.2-0.5t0.5-0.2h6.9l1.6-3.8q0.3-0.8 1.2-1.4t1.7-0.5h7.2q0.9 0 1.8 0.5t1.2 1.4l1.5 3.8h6.9q0.3 0 0.5 0.2t0.2 0.5z"
        />
      </g>
    </svg>
  </button>
  <button
    className="toggle"
    data-jsx-ext="23361152147"
    onClick={undefined}
  >
    FALSE
  </button>
  <div
    className="name"
    data-jsx-ext="23361152147"
  >
    So wrong!
  </div>
</div>
`;

exports[`Storyshots QuestionTypes SC Creation Placeholder 1`] = `
<div
  className="option"
  data-jsx={3520221148}
  data-jsx-ext="23361152147"
>
  <button
    className="leftAction"
    data-jsx={3520221148}
    data-jsx-ext="23361152147"
    onClick={[Function]}
    type="button"
  >
    <svg
      fill="currentColor"
      height="1em"
      preserveAspectRatio="xMidYMid meet"
      style={
        Object {
          "color": undefined,
          "verticalAlign": "middle",
        }
      }
      viewBox="0 0 40 40"
      width="1em"
    >
      <g>
        <path
          d="m35.9 16.4v4.3q0 0.9-0.6 1.5t-1.5 0.7h-9.3v9.2q0 0.9-0.6 1.6t-1.5 0.6h-4.3q-0.9 0-1.5-0.6t-0.7-1.6v-9.2h-9.3q-0.9 0-1.5-0.7t-0.6-1.5v-4.3q0-0.9 0.6-1.5t1.5-0.6h9.3v-9.3q0-0.9 0.7-1.5t1.5-0.6h4.3q0.9 0 1.5 0.6t0.6 1.5v9.3h9.3q0.9 0 1.5 0.6t0.6 1.5z"
        />
      </g>
    </svg>
  </button>
  <button
    className="toggle"
    data-jsx={3520221148}
    data-jsx-ext="23361152147"
    onClick={[Function]}
    type="button"
  >
    FALSE
  </button>
  <input
    data-jsx={3520221148}
    data-jsx-ext="23361152147"
    onChange={[Function]}
    type="text"
    value=""
  />
  <button
    className="rightAction"
    data-jsx={3520221148}
    data-jsx-ext="23361152147"
    onClick={[Function]}
    type="button"
  >
    <svg
      fill="currentColor"
      height="1em"
      preserveAspectRatio="xMidYMid meet"
      style={
        Object {
          "color": undefined,
          "verticalAlign": "middle",
        }
      }
      viewBox="0 0 40 40"
      width="1em"
    >
      <g>
        <path
          d="m11.6 34.3h17.1v-8.6h-17.1v8.6z m20 0h2.8v-20q0-0.3-0.2-0.9t-0.4-0.7l-6.3-6.3q-0.2-0.2-0.8-0.5t-0.8-0.2v9.3q0 0.9-0.7 1.5t-1.5 0.6h-12.8q-0.9 0-1.6-0.6t-0.6-1.5v-9.3h-2.8v28.6h2.8v-9.3q0-0.9 0.6-1.5t1.6-0.6h18.5q0.9 0 1.5 0.6t0.7 1.5v9.3z m-8.6-20.7v-7.2q0-0.3-0.2-0.5t-0.5-0.2h-4.3q-0.3 0-0.5 0.2t-0.2 0.5v7.2q0 0.3 0.2 0.5t0.5 0.2h4.3q0.3 0 0.5-0.2t0.2-0.5z m14.3 0.7v20.7q0 0.9-0.6 1.5t-1.6 0.6h-30q-0.8 0-1.5-0.6t-0.6-1.5v-30q0-0.9 0.6-1.5t1.5-0.6h20.8q0.9 0 1.9 0.4t1.7 1.1l6.3 6.2q0.6 0.6 1 1.7t0.5 2z"
        />
      </g>
    </svg>
  </button>
</div>
`;

exports[`Storyshots QuestionTypes SC Creation Preview 1`] = `
<div
  className="preview"
  data-jsx={3520869439}
>
  <div
    className="title"
    data-jsx={3520869439}
  >
    Hello question
  </div>
  <div
    className="description"
    data-jsx={3520869439}
  >
    abcd
  </div>
  <div
    className="options"
    data-jsx={3520869439}
  >
    <div
      className="options"
      data-jsx={964719302}
    >
      <div
        className="option"
        data-jsx={964719302}
      >
        <button
          className="ui basic fluid button"
          disabled={undefined}
          onClick={[Function]}
          role="button"
          tabIndex={undefined}
        >
          OPTION
        </button>
      </div>
    </div>
  </div>
  <div
    className="button"
    data-jsx={3520869439}
  >
    <span>
      Submit
    </span>
  </div>
</div>
`;

exports[`Storyshots QuestionTypes TypeChooser 1`] = `
<div
  className="typeChooser"
  data-jsx={275591448}
>
  <button
    className="type active"
    data-jsx={275591448}
    onClick={[Function]}
    type="button"
  >
    Single Choice
  </button>
  <button
    className="type"
    data-jsx={275591448}
    onClick={[Function]}
    type="button"
  >
    Multiple Choice
  </button>
  <button
    className="type"
    data-jsx={275591448}
    onClick={[Function]}
    type="button"
  >
    Free-Form
  </button>
</div>
`;

exports[`Storyshots Session default 1`] = `
<div
  className="session"
  data-jsx={622378283}
>
  <h2
    className="title"
    data-jsx={622378283}
  >
    4c821db
     - 
    Long session
  </h2>
  <div
    className="date"
    data-jsx={622378283}
  >
    <span>
      Created on
    </span>
     
    08.02.2015 14:02:00
  </div>
  <div
    className="details"
    data-jsx={622378283}
  >
    <div
      className="block"
      data-jsx={622378283}
    >
      <div
        className="questionBlock"
        data-jsx={1012223770}
      >
        <div
          className="timeLimit"
          data-jsx={1012223770}
        >
          <i
            aria-hidden="true"
            className="clock icon"
          />
          60
          s
        </div>
        <div
          className="showSolution"
          data-jsx={1012223770}
        >
          <i
            aria-hidden="true"
            className="hide icon"
          />
        </div>
        <div
          className="questions"
          data-jsx={1012223770}
        >
          <div
            className="question"
            data-jsx={1012223770}
          >
            <div
              className="questionSingle"
              data-jsx={1928862230}
            >
              <div
                className="id"
                data-jsx={1928862230}
              >
                4c821db7-0940-4a24-b31a-7969104bbc9f
              </div>
              <div
                className="type"
                data-jsx={1928862230}
              >
                SC
              </div>
              <div
                className="content"
                data-jsx={1928862230}
              >
                This is a long question
              </div>
            </div>
          </div>
          <div
            className="question"
            data-jsx={1012223770}
          >
            <div
              className="questionSingle"
              data-jsx={1928862230}
            >
              <div
                className="id"
                data-jsx={1928862230}
              >
                4c821db7-0940-4a24-b31a-7969104bbc9f
              </div>
              <div
                className="type"
                data-jsx={1928862230}
              >
                SC
              </div>
              <div
                className="content"
                data-jsx={1928862230}
              >
                This is a long question
              </div>
            </div>
          </div>
          <div
            className="question"
            data-jsx={1012223770}
          >
            <div
              className="questionSingle"
              data-jsx={1928862230}
            >
              <div
                className="id"
                data-jsx={1928862230}
              >
                4c821db7-0940-4a24-b31a-7969104bbc9f
              </div>
              <div
                className="type"
                data-jsx={1928862230}
              >
                SC
              </div>
              <div
                className="content"
                data-jsx={1928862230}
              >
                This is a long question
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="actionArea"
      data-jsx={622378283}
    >
      <button
        className="ui icon left labeled button"
        disabled={undefined}
        onClick={[Function]}
        role="button"
        tabIndex={undefined}
      >
        <i
          aria-hidden="true"
          className="play icon"
        />
        <span>
          Start
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots SessionTimeline default 1`] = `
<div
  className="sessionTimeline"
  data-jsx={1843648147}
>
  <div
    className="topRow"
    data-jsx={1843648147}
  >
    <div
      className="startingTime"
      data-jsx={1843648147}
    >
      <i
        aria-hidden="true"
        className="time icon"
      />
       18:17:22
    </div>
    <div
      className="runningTime"
      data-jsx={1843648147}
    >
      <i
        aria-hidden="true"
        className="play circle icon"
      />
       12:56
    </div>
  </div>
  <div
    className="blocks"
    data-jsx={1843648147}
  />
  <div
    className="buttons"
    data-jsx={1843648147}
  >
    <button
      className="ui large icon left labeled button"
      disabled={undefined}
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
    >
      <i
        aria-hidden="true"
        className="left arrow icon"
      />
      Previous
    </button>
    <button
      className="ui large icon primary right labeled button"
      disabled={undefined}
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
    >
      <i
        aria-hidden="true"
        className="right arrow icon"
      />
      Next
    </button>
  </div>
</div>
`;
